# kdpe

./: .env  .gitignore  README.md  config.json  pyproject.toml
configs/: conversation.json
data/: Epstein files 2026-02-11.torrent  download.py
docs/: data.md  final_report.md  quality_spec.md  related_work.md  study_design.md  study_plan.md
graphs/: demo_baseline.gexf  demo_conversational.gexf  demo_one_shot.gexf  demo_resolved_baseline.gexf  demo_resolved_conversational.gexf  demo_resolved_one_shot.gexf  graph.gexf
logs/: demo_log.html  demo_metrics.json
prompts/: system.json  user.json
schemas/: conversational.json  demo_conversational.json  demo_one_shot.json  one_shot.json
src/: evaluation.py  main.py
src/data/: ingest.py  process.py  split.py
src/extraction/: __init__.py  baseline.py  discovery.py  extracion.py  resolve.py
src/utils/: __init__.py  agent.py  email.py
