[project]
name = "kdpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mistralai>=2.4.8",
    "networkx[default]>=3.6.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tqdm>=4.67.3",
]
