[project]
name = "kdpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "en-core-web-trf",
    "mistralai>=2.4.8",
    "networkx[default]>=3.6.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.13",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }
